<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/profile_prepod"
            android:title="@string/profile"

            />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/raspis_gr" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/raspis" />

        <item
            android:id="@+id/zach"
            android:title="@string/zachetki"/>
        <item
            android:id="@+id/spr"
            android:title="@string/spisok_gr"/>

        <item
            android:id="@+id/news"
            android:title="@string/news"/>

    </group>
</menu>